fixed alignment of about page image header

--- a/2024/11/herald-trends/aboutstyles.css
+++ b/2024/11/herald-trends/aboutstyles.css
@@ -10,7 +10,7 @@
 }
 
 .image-header {
-    margin-top: 0px;
+    margin-top: 2px;
     margin-bottom: 0px;
     width: 300px;
     background-image: url('ImageAssets/lowqualheader.png');
